--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -3332,6 +3332,7 @@ h6 {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     color: #555555;
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
