--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -3339,6 +3339,11 @@ h6 {
 .wel_item p {
     font-family: "Roboto", sans-serif;
     color: #666666;
+    margin-bottom: 0px;
+}
+
+.wel_item p:last-child {
+    margin-bottom: 20px;
 }
 
 .tools_expert {
